--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,7 @@
             integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
             crossorigin="anonymous"
         ></script>
-        <title>Stremio-Jackett by Aymene69</title>
+        <title>Stremio-Jackett</title>
     </head>
     <body>
         <section class="vh-100">
@@ -50,7 +50,7 @@
                                         height="100"
                                     />
                                     <h2 class="fw-bold mb-2 text-uppercase">Stremio-Jackett</h2>
-                                    <p class="text-white-50 mb-5">1.0.0</p>
+                                    <p class="text-white-50 mb-5">1.1.3</p>
                                     <h3 class="text-white mb-5">Configuration page</h3>
                                     <p class="text-white-50 mb-5">
                                         Please fill in the following fields to install Stremio-Jackett
