--- a/src/frontend/configure/index.html
+++ b/src/frontend/configure/index.html
@@ -1,38 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+		<title>Stremio-Jackett</title>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<style>
-			body {
-				background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-					url("https://upload.wikimedia.org/wikipedia/commons/thumb/0/00/Flag_of_Palestine.svg/1280px-Flag_of_Palestine.svg.png")
-						no-repeat center center fixed;
-				-webkit-background-size: cover;
-				-moz-background-size: cover;
-				-o-background-size: cover;
-				background-size: cover;
-				font-family: "Roboto", sans-serif;
-			}
-		</style>
-		<link rel="preconnect" href="https://fonts.googleapis.com" />
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-		<link
-			href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap"
-			rel="stylesheet"
-		/>
+		<link href="styles.css" rel="stylesheet" />
 		<link
 			href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
 			rel="stylesheet"
 			integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
 			crossorigin="anonymous"
 		/>
-		<script
-			src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-			integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-			crossorigin="anonymous"
-		></script>
-		<title>Stremio-Jackett</title>
 	</head>
 	<body>
 		<section class="vh-100">
@@ -155,12 +133,8 @@
 				let addonType = document.getElementById("serviceProvider").value;
 				let maxResultsInput = document.getElementById("maxResults");
 
-				if (addonType !== "torrent") {
-					if (Number(maxResultsInput.value) < 1) {
-						maxResultsInput.value = String(1);
-					} else if (Number(maxResultsInput.value) > 15) {
-						maxResultsInput.value = String(15);
-					}
+				if (addonType !== "torrent" && Number(maxResultsInput.value) > 15) {
+					maxResultsInput.value = String(15);
 				}
 			}
 
