--- a/src/index.html
+++ b/src/index.html
@@ -105,6 +105,24 @@
 										/>
 									</div>
 
+									<div class="form-outline form-white mb-4" id="prioQualityDiv">
+                                        <label class="form-label"
+                                            >Prioritize quality</label
+                                        >
+                                        <select
+                                            required
+                                            class="form-select"
+                                            aria-label=""
+                                            id="prioritizedQuality"
+                                            onchange="updateLink()"
+                                        >
+                                            <option value="4k">4k</option>
+                                            <option value="1080p">1080p</option>
+                                            <option value="720p">720p</option>
+                                            <option value="480p">480p</option>
+                                        </select>
+                                    </div>
+
 									<div class="form-outline form-white mb-4" id="maxResultDiv">
 										<label class="form-label">Number of results per search </label>
 										<input
@@ -150,6 +168,7 @@
 		<script>
 			document.getElementById("realDebridApiDiv").style.display = "none";
 			document.getElementById("allDebridApiDiv").style.display = "none";
+			document.getElementById("prioQualityDiv").style.display = "none";
 
 			function onChangeMaxResults() {
 				let addonType = document.getElementById("serviceProvider").value;
@@ -171,6 +190,7 @@
 				let maxResults = document.getElementById("maxResults").value;
 				let jackettUrl = document.getElementById("jackettUrl").value;
 				let jackettApi = document.getElementById("jackettApi").value;
+				let prioritizedQuality = document.getElementById("prioritizedQuality").value;
 
 				if (jackettUrl.at(-1) === "/") {
 					jackettUrl = jackettUrl.slice(0, -1);
@@ -181,6 +201,7 @@
 				if (serviceProvider === "torrent") {
 					document.getElementById("realDebridApiDiv").style.display = "none";
 					document.getElementById("allDebridApiDiv").style.display = "none";
+					document.getElementById("prioQualityDiv").style.display = "none";
 					let dataJson = {
 						streamService: serviceProvider,
 						jackettUrl: jackettUrl,
@@ -195,12 +216,14 @@
 				} else if (serviceProvider === "realdebrid") {
 					document.getElementById("realDebridApiDiv").style.display = "block";
 					document.getElementById("allDebridApiDiv").style.display = "none";
+					document.getElementById("prioQualityDiv").style.display = "block";
 					let dataJson = {
 						streamService: serviceProvider,
 						jackettUrl: jackettUrl,
 						jackettApiKey: jackettApi,
 						debridApiKey: realDebridApi,
 						maxResults: maxResults,
+						prioritizedQuality: prioritizedQuality,
 					};
 					dynamicLink.href = `stremio://${
 						window.location.host
@@ -210,12 +233,14 @@
 				} else if (serviceProvider === "alldebrid") {
 					document.getElementById("realDebridApiDiv").style.display = "none";
 					document.getElementById("allDebridApiDiv").style.display = "block";
+					document.getElementById("prioQualityDiv").style.display = "block";
 					let dataJson = {
 						streamService: serviceProvider,
 						jackettUrl: jackettUrl,
 						jackettApiKey: jackettApi,
 						debridApiKey: allDebridApi,
 						maxResults: maxResults,
+						prioritizedQuality: prioritizedQuality,
 					};
 					dynamicLink.href = `stremio://${
 						window.location.host
