--- a/src/frontend/configure/index.html
+++ b/src/frontend/configure/index.html
@@ -48,6 +48,7 @@
 											<option value="torrent">torrent</option>
 											<option value="realdebrid">realdebrid</option>
 											<option value="alldebrid">alldebrid</option>
+											<option value="premiumize">premiumize</option>
 										</select>
 									</div>
 
@@ -79,6 +80,19 @@
 											class="form-control form-control-lg"
 											placeholder="Enter your All-Debrid service API key"
 											id="allDebridApi"
+											oninput="updateLink()"
+										/>
+									</div>
+
+									<div class="form-outline form-white mb-4" id="premiumizeApiDiv">
+										<label class="form-label"
+											>Premiumize API key</label
+										>
+										<input
+											required
+											class="form-control form-control-lg"
+											placeholder="Enter your All-Debrid service API key"
+											id="premiumizeApi"
 											oninput="updateLink()"
 										/>
 									</div>
@@ -128,6 +142,7 @@
 		<script>
 			document.getElementById("realDebridApiDiv").style.display = "none";
 			document.getElementById("allDebridApiDiv").style.display = "none";
+			document.getElementById("premiumizeApiDiv").style.display = "none";
 
 			function onChangeMaxResults() {
 				let addonType = document.getElementById("serviceProvider").value;
@@ -142,6 +157,7 @@
 				let serviceProvider = document.getElementById("serviceProvider").value;
 				let realDebridApi = document.getElementById("realDebridApi").value;
 				let allDebridApi = document.getElementById("allDebridApi").value;
+				let premiumizeApi = document.getElementById("premiumizeApi").value;
 				let maxResults = document.getElementById("maxResults").value;
 				let jackettUrl = document.getElementById("jackettUrl").value;
 				let jackettApi = document.getElementById("jackettApi").value;
@@ -155,6 +171,7 @@
 				if (serviceProvider === "torrent") {
 					document.getElementById("realDebridApiDiv").style.display = "none";
 					document.getElementById("allDebridApiDiv").style.display = "none";
+					document.getElementById("premiumizeApiDiv").style.display = "none";
 					let dataJson = {
 						streamService: serviceProvider,
 						jackettUrl: jackettUrl,
@@ -169,6 +186,7 @@
 				} else if (serviceProvider === "realdebrid") {
 					document.getElementById("realDebridApiDiv").style.display = "block";
 					document.getElementById("allDebridApiDiv").style.display = "none";
+					document.getElementById("premiumizeApiDiv").style.display = "none";
 					let dataJson = {
 						streamService: serviceProvider,
 						jackettUrl: jackettUrl,
@@ -183,12 +201,29 @@
 					)}/manifest.json`;
 				} else if (serviceProvider === "alldebrid") {
 					document.getElementById("realDebridApiDiv").style.display = "none";
+					document.getElementById("premiumizeApiDiv").style.display = "none";
 					document.getElementById("allDebridApiDiv").style.display = "block";
 					let dataJson = {
 						streamService: serviceProvider,
 						jackettUrl: jackettUrl,
 						jackettApiKey: jackettApi,
 						debridApiKey: allDebridApi,
+						maxResults: maxResults,
+					};
+					dynamicLink.href = `stremio://${
+						window.location.host
+					}${window.location.pathname.replace("/configure", "")}/${btoa(
+						JSON.stringify(dataJson)
+					)}/manifest.json`;
+				} else if (serviceProvider === "premiumize") {
+					document.getElementById("realDebridApiDiv").style.display = "none";
+					document.getElementById("allDebridApiDiv").style.display = "none";
+					document.getElementById("premiumizeApiDiv").style.display = "block";
+					let dataJson = {
+						streamService: serviceProvider,
+						jackettUrl: jackettUrl,
+						jackettApiKey: jackettApi,
+						debridApiKey: premiumizeApi,
 						maxResults: maxResults,
 					};
 					dynamicLink.href = `stremio://${
