Fixed an issue where index.html wasn't loaded

--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
 
         link.href = `stremio://${
 						window.location.host
-					}/${btoa(JSON.stringify(data))}/manifest.json?`;
+					}/${btoa(JSON.stringify(data))}/manifest.json`;
     }
 
 </script>
