Fixed RD multiple torrent adding, fixed russian and indian language, added dutch

--- a/index.html
+++ b/index.html
@@ -172,6 +172,9 @@
                       <option value="de">🇩🇪</option>
                       <option value="it">🇮🇹</option>
                       <option value="pt">🇵🇹</option>
+                      <option value="ru">🇷🇺</option>
+                      <option value="in">🇮🇳</option>
+                      <option value="nl">🇳🇱</option>
                   </select>
                 </div>
               </div>
