Add a copy link button to the config page

--- a/index.html
+++ b/index.html
@@ -219,6 +219,7 @@
           </div>
 
           <div class="mt-6 flex items-center justify-center gap-x-6">
+              <a id="copy" onclick="copyLink()" class="cursor-pointer rounded-md bg-black px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg--500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Copy Link</a>
               <a id="install" href="#" class="rounded-md bg-black px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg--500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Install</a>
           </div>
         </form>
@@ -330,6 +331,11 @@
         link.href = `stremio://${
 						window.location.host
 					}/${btoa(JSON.stringify(data))}/manifest.json`;
+    }
+
+    function copyLink() {
+        const link = document.getElementById('install').href.replace('stremio://', window.location.protocol + '//');
+        navigator.clipboard.writeText(link);
     }
 
 </script>
